JUnit test added